Fix small bugs and irregularities in likes and comments' logic,start implementing pagination
