# src/docs/swagger.json
@@ -95,81 +95,6 @@
                     }
                 }
             }
-        },
-        "api/users/login":{
-            "post":{
-                "tags":["Users"],
-                "summary":"User Login",
-                "description":"For logging into a user account.",
-                "parameters":[
-                    {
-                        "in":"body",
-                        "name":"User Credentials",
-                        "description":"User Account Credentials",
-                        "schema":{
-                            "type":"object",
-                            "properties":{
-                                "email":{
-                                    "type":"string",
-                                    "description":"Email linked to the user account",
-                                    "example":"johndoe@abc.com"
-                                },
-                                "password":{
-                                    "type":"string",
-                                    "description":"Password for the user account",
-                                    "example":"abc123#"
-                                }
-                            }
-                        }
-                    }
-                ],
-                "responses":{
-                    "200":{
-                        "description":"Login successfull",
-                        "schema":{
-                            "type":"object",
-                            "properties":{
-                                "success":{
-                                    "type":"boolean",
-                                    "description":"A boolean value representing if login was successfull"
-                                },
-                                "message":{
-                                    "type":"string",
-                                    "description":"Info abou the operation"
-                                },
-                                "userId":{
-                                    "type":"string",
-                                    "description":"ID of the user account currently logged in"
-                                }
-                            },
-                            "example":{
-                                "success":true,
-                                "message":"Login Successfull",
-                                "userId":"egDkljlkEeslkahd134lklk"
-                            }
-                        }
-                    },
-                    "401":{
-                        "description":"Invalid Credentials",
-                        "schema":{
-                            "type":"object",
-                            "properties":{
-                                "success":{
-                                    "type":"boolean",
-                                    "description":"Represents if login was successfull"
-                                },
-                                "message":{
-                                    "description":"Information about the operation"
-                                }
-                            },
-                            "example":{
-                                "success":false,
-                                "message":"Invalid Credentials"
-                            }
-                        }
-                    }
-                }
-            }
         }
     }
 }
